# DubasMafia

./: .env.example  .gitignore  Dockerfile  README.md  Telegram-бот DUB Quest Game.docx  _extract.txt  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 85680bcd291d_add_shop_action_logs.py  a8760ce35164_create_core_tables.py  e096515e9d6e_add_shop_and_jackpot_tables.py  fa14aaaee92f_add_daily_quest_offers_table.py
docs/: quests.md  release-checklist.md  testing.md
quests/: quests.json
src/bot/: __init__.py  config.py  main.py
src/bot/application/ports/: admin_read_repository.py  chat_message_repository.py  daily_quest_repository.py  jackpot_repository.py  player_repository.py  semantic_evaluator.py  shop_action_repository.py
src/bot/application/services/: admin_command_service.py  guess_service.py  (+11 more)
src/bot/domain/: chat_message.py  player.py  quest.py  scheduling.py
src/bot/infrastructure/: clock.py  openai_semantic_evaluator.py  semantic_evaluator.py
tests/: test_admin_command_service.py  test_admin_finance_commands.py  test_admin_observability_service.py  test_chat_message_service.py  test_daily_quest_service.py  test_daily_quests_router.py  test_game_schedule_policy.py  test_guess_service.py  test_offer_scheduler_service.py  test_player_services.py  test_quest_catalog_service.py  test_quest_completion_service.py  test_round_settlement_service.py  test_schedule_service.py  test_schema_metadata.py  test_settings.py  test_shop_service.py  test_system_clock.py  test_system_service.py
(+16 files in other folders)
